--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</head>
 
 <body>
-	
+	<div style="overflow-x: hidden; width: 100%;">
 	<!-- header -->
 	
 	<header>
@@ -300,7 +300,7 @@
 	</footer>
 	
 
-
+	</div>
 
 		<script src="https://kit.fontawesome.com/682febeeb9.js" crossorigin="anonymous"></script> 
     
